--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,8 @@
 @import "_base";
 @import "_button";
 @import "_logos";
+@import "vendor/_loading-bar";
+@import "vendor/_overlayscrollbars";
 @import "_header";
 @import "_footer";
 @import "_home";
