--- a/views/course.twig
+++ b/views/course.twig
@@ -11,7 +11,7 @@
 					<div class="container">
 						<div class="left subcontainer">
 							<p class="subheading">Progreso del curso</p>
-							<p class="progress">10%</p>
+							<div class="ldBar circle" data-preset="circle" data-value="10" style="height:128px;width: 128px;"></div>
 						</div>
 						<div class="right subcontainer">
 							<p class="subheading">Detalles del curso</p>
@@ -49,6 +49,7 @@
 								<a href="{{module.link}}">
 									<div class="left">
 										<p class="subheading">{{module.title}}</p>
+										<p class="text">{{module.custom.author}}</p>
 									</div>
 									<div class="right">
 										<div>
@@ -56,10 +57,8 @@
 												{{module.custom.minutes}}
 												min</p>
 										</div>
-										<div class="progress-wrap">
-											<div class="progress-background">
-												<div class="progress-bar"></div>
-											</div>
+										<div class="progress">
+											<div class="ldBar line2" data-value="40" data-aspect-ratio="none" style="width: 6rem"></div>
 											<p class="text">40%</p>
 										</div>
 										<div>
