--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -17,7 +17,9 @@
 </div>
 <footer>
 	<div class="wrapper">
-		<div class="left">© 2021 Sanofi-aventis, S.A. Todos los derechos reservados</div>
+		<div class="left">&copy;
+			{{ now|date('Y') }}
+			Sanofi-aventis, S.A. Todos los derechos reservados</div>
 		<div class="right">
 			<a href="">Condiciones legales</a>
 			<a href="">Contacto</a>
