--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,7 +4,9 @@
 
 @import "_base";
 @import "_button";
+@import "_checkbox";
 @import "_logos";
+@import "_form";
 @import "vendor/_loading-bar";
 @import "vendor/_overlayscrollbars";
 @import "_header";
