--- a/views/blocks/header.twig
+++ b/views/blocks/header.twig
@@ -17,7 +17,7 @@
 				<a href="{{ site.url }}/login" class="button button-m">Acceso</a>
 			</div>
 		{% elseif fn('is_page', 'login') %}
-			<div></div>
+			<div class="page-nav"></div>
 		{% else %}
 			<div>
 				<a href="{{ site.url }}/login" class="button button-m">Acceso</a>
