--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,16 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "_base";
-@import "_button";
-@import "_checkbox";
-@import "_logos";
-@import "_form";
-@import "vendor/_loading-bar";
-@import "vendor/_overlayscrollbars";
-@import "_header";
-@import "_footer";
-@import "_home";
-@import "_login";
-@import "_course";
-@import "_module";
+@import "base";
+@import "components/button";
+@import "components/radio";
+@import "components/select";
+@import "components/checkbox";
+@import "components/progressbars";
+@import "vendor/loading-bar";
+@import "vendor/overlayscrollbars";
+@import "logos";
+@import "form";
+@import "header";
+@import "footer";
+@import "home";
+@import "access";
+@import "login";
+@import "register";
+@import "course";
+@import "module";
