--- a/views/login.twig
+++ b/views/login.twig
@@ -6,7 +6,7 @@
 				<div class="left">
 					<h1 class="heading">Acceso</h1>
 					<p class="text">Si es su primera vez
-						<a href="/registro" class="link">cree su cuenta</a>
+						<a href="{{site.url}}/registro" class="link">cree su cuenta</a>
 					</p>
 					<form action="{{site.url}}/curso/actualizacion-del-abordaje-terapeutico-del-paciente-con-dislipemia/">
 						<div class="field">
@@ -21,13 +21,13 @@
 							</div>
 						</div>
 						<div class="checkbox">
-							<input id="accept" type="checkbox" value="accept" class="styled-checkbox">
+							<input id="accept" type="checkbox" value="accept" class="styled-checkbox" tabindex="-1">
 							<label for="accept" tabindex="0">
 								He leído y acepto la
-								<a href="/politica-privacidad" class="link">política de privacidad</a>
+								<a href="/politica-privacidad" class="link" tabindex="0">política de privacidad</a>
 							</label>
 						</div>
-						<a class="button button-m" tabindex="0">Acceder</a>
+						<a href="{{site.url}}/curso/actualizacion-del-abordaje-terapeutico-del-paciente-con-dislipemia" class="button button-m submit" tabindex="0">Acceder</a>
 					</form>
 				</div>
 				<div class="right">
