--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,7 @@
 @import "components/checkbox";
 @import "components/progressbars";
 @import "vendor/loading-bar";
+@import "vendor/owl-carousel";
 @import "vendor/overlayscrollbars";
 @import "logos";
 @import "form";
