--- a/views/home.twig
+++ b/views/home.twig
@@ -145,7 +145,7 @@
 			<div class="wrapper">
 				<h2 class="heading">Comité científico</h2>
 			</div>
-			<div class="members">
+			<div class="members owl-carousel">
 				<div class="member">
 					<div class="member-image-wrapper">
 						<img src="{{theme.link}}/static/img/300-1.jpeg" alt="" class="member-image">
