--- a/src/scss/_access.scss
+++ b/src/scss/_access.scss
@@ -1,5 +1,6 @@
 #login,
-#register {
+#register,
+#contact {
 	@apply border-b border-line;
 	min-height: calc(100vh - 437px); // header + footer
 	.container {
