--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -21,10 +21,10 @@
 			{{ now|date('Y') }}
 			Sanofi-aventis, S.A. Todos los derechos reservados</div>
 		<div class="right">
-			<a href="">Condiciones legales</a>
-			<a href="">Contacto</a>
-			<a href="">Política de cookies</a>
-			<a href="" class="noline">Política de privacidad</a>
+			<a href="https://www.sanofi.es/es/aviso-legal" target="_blank">Aviso legal</a>
+			<a href="{{site.url}}/contacto">Contacto</a>
+			<a href="https://www.sanofi.es/es/politica-de-cookies" target="_blank">Política de cookies</a>
+			<a href="https://www.sanofi.es/es/politica-de-privacidad" target="_blank" class="noline">Política de privacidad</a>
 		</div>
 	</div>
 </footer>
