--- a/views/register.twig
+++ b/views/register.twig
@@ -10,7 +10,7 @@
 					</p>
 					<p class="text">Le damos la bienvenida al entorno formativo de referencia sobre hipercolesterolemia, donde podrá actualizar y complementar sus conocimientos sobre su abordaje terapéutico.</p>
 					<p class="text">Además de estar acreditada con 9,6 créditos por la Comisión de Formación Continuada de las Profesiones Sanitarias de la Comunidad de Madrid para médicos especialistas implicados en el manejo del paciente con dislipemias, cuenta con la participación de las principales sociedades científicas en el área: SEC, SEA, SEMI, SEEN, SED y SEN.</p>
-					<a id="btn-goToStep1" href="#" class="button button-l submit" tabindex="0">Comenzar registro</a>
+					<a id="btn-goToStep1" href="#" class="button button-l submit">Comenzar registro</a>
 				</div>
 				<div class="right register-form">
 					<div id="image">
@@ -74,7 +74,7 @@
 										</div>
 									</div>
 									<div class="right">
-										<a id="btn-goToStep2" href="#" class="button button-m submit" tabindex="0">Siguiente</a>
+										<a id="btn-goToStep2" href="#" class="button button-m submit">Siguiente</a>
 									</div>
 								</div>
 							</div>
@@ -91,10 +91,10 @@
 										{% include "fragments/select-collegenumber2.twig" %}
 										<div class="field">
 											<label for="name" class="text">Número correlativo asignado</label>
-											<input id="name" type="number" class="box" placeholder="Número correlativo">
+											<input id="name" type="number" class="box" placeholder="Número correlativo" tabindex="-1">
 										</div>
 										<br>
-										<a id="btn-goToStep3" href="#" class="button button-m submit" tabindex="0">Siguiente</a>
+										<a id="btn-goToStep3" href="#" class="button button-m submit">Siguiente</a>
 									</div>
 								</div>
 							</div>
@@ -104,29 +104,29 @@
 									<div class="left">
 										<div class="field">
 											<label for="password" class="text">Contraseña</label>
-											<input id="password" type="password" class="box" placeholder="Contraseña">
+											<input id="password" type="password" class="box" placeholder="Contraseña" tabindex="-1">
 										</div>
 										<div class="field">
 											<label for="confirm" class="text">Confirma la contraseña</label>
-											<input id="confirm" type="password" class="box" placeholder="Confirma la contraseña">
+											<input id="confirm" type="password" class="box" placeholder="Confirma la contraseña" tabindex="-1">
 										</div>
 									</div>
 									<div class="right">
 										<div class="checkbox">
-											<input id="accept2" type="checkbox" value="accept2" class="styled-checkbox" tabindex="-1">
-											<label for="accept2" tabindex="0">
+											<input id="accept2" type="checkbox" value="accept2" class="styled-checkbox">
+											<label for="accept2">
 												He leído y acepto
-												<a href="/politica-privacidad" class="link" tabindex="0">el aviso legal y la política de privacidad</a>
+												<a href="/politica-privacidad" class="link">el aviso legal y la política de privacidad</a>
 											</label>
 										</div>
 										<div class="checkbox">
-											<input id="accept3" type="checkbox" value="accept3" class="styled-checkbox" tabindex="-1">
-											<label for="accept3" tabindex="0" class="long-text">
+											<input id="accept3" type="checkbox" value="accept3" class="styled-checkbox">
+											<label for="accept3" class="long-text">
 												Acepto a que Sanofi-Aventis S.A (“Sanofi”) trate mis datos personales facilitados para gestionar las relaciones promocionales conmigo, llevar a cabo segmentación profesional para entender mejor mis intereses y ofrecerme contenido personalizado, y para fines estadísticos, históricos o científicos. Puede usted ajustar de forma individual cada una de las finalidades anteriores. Ver en detalle.
 											</label>
 										</div>
 										<br>
-										<a id="btn-goToStep2" href="#" class="button button-m submit" tabindex="0">Crear cuenta</a>
+										<a id="btn-goToStep2" href="#" class="button button-m submit">Crear cuenta</a>
 									</div>
 								</div>
 							</div>
