--- a/views/course.twig
+++ b/views/course.twig
@@ -49,7 +49,7 @@
 								<a href="{{module.link}}">
 									<div class="left">
 										<p class="subheading">{{module.title}}</p>
-										<p class="text">{{module.custom.author}}</p>
+										<p class="text">{{module.custom.module_author}}</p>
 									</div>
 									<div class="right">
 										<div>
